# NovelAI-desktop-app

./: .gitignore  .gitmodules  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_vibe_ux.sql  003_vibe_favorite.sql  004_preset_thumbnail.sql  005_preset_vibe_strength.sql  006_preset_favorite.sql  007_preset_model.sql  008_project_thumbnail.sql  009_prompt_group_overhaul.sql  010_prompt_entry_name.sql  011_prompt_group_default_strength.sql  012_add_main_genre.sql  013_tag_database.sql  014_tag_group_favorites.sql  015_system_group_genre_defaults.sql  016_prompt_group_random_wildcard.sql  017_vibe_folders.sql  018_style_preset_folders.sql  019_prompt_group_folders.sql  020_prompt_group_default_genres.sql  021_prompt_entry_negative_prompt.sql  022_prompt_presets.sql  023_sidebar_preset_groups.sql  024_sidebar_preset_group_strength.sql  025_preset_slot_positions.sql  026_prompt_preset_sort_key.sql
src-tauri/resources/: .gitkeep  character_groups.json
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  state.rs  test_utils.rs
src-tauri/src/commands/: genres.rs  images.rs  mod.rs  preset_folders.rs  projects.rs  prompt_group_folders.rs  prompt_groups.rs  prompt_presets.rs  settings.rs  sidebar_preset_groups.rs  style_preset_folders.rs  style_presets.rs  system_group_settings.rs  system_prompts.rs  tags.rs  tokens.rs  vibe_folders.rs  vibes.rs
src-tauri/src/models/: dto.rs
(+238 files in other folders)
