[package]
name = "novelai-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
secrecy = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
novelai-api = { path = "../novelai_api_client/rust-api" }
chrono = "0.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "novelai_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]
